# TSRBench

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  custom_dataset.py  quickstart.ipynb  visualize_corruptions.py
scripts/: generate_benchmark.sh  generate_noise.sh
tsrbench/: __init__.py  __main__.py  collective_noise.py  validate.py  visualize.py
