[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsrbench"
version = "0.3.0"
description = "TSRBench: EVT-based noise injection toolkit for evaluating time series robustness"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Dongbin Kim"},
]
keywords = ["time-series", "robustness", "benchmark", "noise-injection", "extreme-value-theory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "ads-evt>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
tsrbench = "tsrbench.__main__:main"

[project.urls]
Homepage = "https://github.com/dongbeank/TSRBench"
Repository = "https://github.com/dongbeank/TSRBench"

[tool.setuptools.packages.find]
include = ["tsrbench*"]
